...
    <string name="update_download_failed_unavailable">系统下载服务不可用，请重试或从发布页面下载</string>
    <string name="update_install_permission">请允许安装此来源的应用，返回后再次点击“安装更新”</string>
    <string name="update_install_failed">无法打开系统安装程序，请稍后重试</string>
    <string name="update_dialog_title">发现新版本</string>
    <string name="update_dialog_action_update">下载更新</string>
    <string name="update_dialog_action_later">稍后</string>
    <string name="update_dialog_no_notes">本次更新没有提供说明。</string>
    <string name="update_open_release_failed">无法打开浏览器</string>
    <string name="import_choose_method">选择一种方式，开始阅读。</string>
    <string name="import_from_file">从文件导入</string>
    <string name="import_file_formats">TXT / Markdown / EPUB</string>
    <string name="import_paste_description">复制的英文文章或段落</string>
    <string name="import_epub_support_note">EPUB 按章节导入。\n分章过长时，可换一个版本重试。</string>
...
